[package]
name = "ui"
version = "0.1.0"
authors = ["Esteban Mata <esteban1113001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Graphics
winit = { version = "0.23.0", features = ["serde"] }
glutin = "0.25.1"
gfx = "0.18.2"
gfx_device_gl = {version = "0.16.2", optional = true}
gfx_gl = {version = "0.6.1", optional = true}
old_school_gfx_glutin_ext = "0.25"

# Serde
serde = { version = "1.0", features = ["derive"] }
