[package]
name = "ui"
version = "0.1.0"
authors = ["Esteban Mata <esteban1113001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {package = "common", path = "../common"}

# Graphics
winit = { version = "0.24.0", features = ["serde"] }
glutin = { version = "0.26.0" }

# Serde
serde = { version = "1.0.118", features = ["derive"] }

